--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <a href="https://github.com/guido4096">See https://github.com/guido4096 for GitHub projects.</a>
 
 <a href=""https://github.com/guido4096/LilyGO-ModbusGateway"> 
-<h1 align = "center">🌟LilyGO T-POE-PRO Modbus Gateway between SolarEdge/RTU and EM24/TCP</h1>
+  <h1 align = "center">ESP32 (LilyGO T-POE-PRO) Modbus Gateway between SolarEdge/RTU and EM24/TCP</h1>
 </a>
 
 This is a gateway to connect a SolarEdge inverter to your own energy meter. 
